--- a/square_circle_gen.ipynb
+++ b/square_circle_gen.ipynb
@@ -29,13 +29,70 @@
       "metadata": {
         "id": "aDb1GHBxwLL7",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 286
+        },
+        "outputId": "52dced35-f9c7-46dc-f94f-3a06fca2a64a"
       },
       "source": [
-        ""
+        "import math\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "sq   = np.zeros((12,12,100));\n",
+        "tr   = np.zeros((12,12,100));\n",
+        "rect = np.zeros((12,12,100));\n",
+        "\n",
+        "for k in range(100):\n",
+        "  x0 = np.int8(3 * np.random.random_sample())+1;   #random origin x coord\n",
+        "  y0 = np.int8(3 * np.random.random_sample())+1;   #random origin y coord\n",
+        "  ws = np.int8(4 * np.random.random_sample())+4;   #random square size\n",
+        "  wc = np.int8(4 * np.random.random_sample())+4;   #random circle diameter\n",
+        "\n",
+        "  # square\n",
+        "  for i in range(ws):\n",
+        "    for j in range(ws):\n",
+        "      sq[y0+i, x0+j, k] = 1;\n",
+        "  \n",
+        "  # circle\n",
+        "  r = wc/2;\n",
+        "  r2 = r**2;\n",
+        "  xc = x0+r;\n",
+        "  yc = y0+r;\n",
+        "  for i in range(wc):\n",
+        "    for j in range(wc):\n",
+        "      if (i**2+k**2)<=rc\n",
+        "      \n",
+        "plt.imshow(sq[:,:,11], cmap=plt.cm.binary)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<matplotlib.image.AxesImage at 0x7f9840f976d8>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP4AAAD8CAYAAABXXhlaAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDMuMC4zLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvnQurowAAColJREFUeJzt3V+InQedh/HnuxmLpi5ayVA0KZtc\nlC5BWCqDVAuyNF2oqxgvlqWFSleE3KxaRZC4N731QkQvRAi1WrC0LLFgkaKWqsjCEpz+AZtEaanZ\nNjU1p8iqeBOLv72YI8ShZbLzvue8p/yeD5Q558zpvF+SPHP+TpKqQlIvfzP1AEnLZ/hSQ4YvNWT4\nUkOGLzVk+FJDhi81ZPhSQ4YvNbS2zIPt27evDh48uMxDSq2cO3eOV155JTtdb6nhHzx4kM3NzWUe\nUmplY2Pjiq7nXX2pIcOXGjJ8qSHDlxoaFH6S25L8MslzSY6PNUrSYu06/CR7gK8BHwQOA3ckOTzW\nMEmLM+QW/73Ac1X1fFVdAh4Cjo4zS9IiDQl/P/DiZefPzy/7K0mOJdlMsjmbzQYcTtJYFv7kXlWd\nqKqNqtpYX19f9OEkXYEh4b8EXHfZ+QPzyyStuCHh/wy4PsmhJFcBtwOPjDNL0iLt+r36VfVqkk8C\nPwD2APdV1enRlklamEE/pFNVjwKPjrRF0pL4zj2pIcOXGjJ8qSHDlxoyfKkhw5caMnypIcOXGjJ8\nqSHDlxoyfKkhw5caMnypIcOXGjJ8qSHDlxoyfKkhw5caMnypIcOXGjJ8qaFBf8uutiSZesLKq6qp\nJ+gy3uJLDRm+1JDhSw0ZvtSQ4UsN7Tr8JNcl+XGSM0lOJ7l7zGGSFmfIy3mvAp+rqieT/C3wRJLH\nqurMSNskLciub/Gr6kJVPTk//QfgLLB/rGGSFmeUx/hJDgI3AqfG+HqSFmtw+EneCnwH+ExV/f41\nPn8syWaSzdlsNvRwkkYwKPwkb2Ir+geq6uHXuk5VnaiqjaraWF9fH3I4SSMZ8qx+gG8AZ6vqy+NN\nkrRoQ27xbwY+BtyS5On5f/880i5JC7Trl/Oq6r8AfyxNegPynXtSQ4YvNWT4UkOGLzVk+FJDhi81\nZPhSQ4YvNWT4UkOGLzVk+FJDhi81ZPhSQ4YvNWT4UkOGLzVk+FJDhi81ZPhSQ4YvNWT4UkOGLzVk\n+FJDhi81ZPhSQ4YvNWT4UkODw0+yJ8lTSb43xiBJizfGLf7dwNkRvo6kJRkUfpIDwIeAe8eZI2kZ\nht7ifwX4PPDnEbZIWpJdh5/kw8DFqnpih+sdS7KZZHM2m+32cJJGNOQW/2bgI0nOAQ8BtyT59vYr\nVdWJqtqoqo319fUBh5M0ll2HX1VfqKoDVXUQuB34UVXdOdoySQvj6/hSQ2tjfJGq+gnwkzG+lqTF\n8xZfasjwpYYMX2rI8KWGDF9qyPClhgxfasjwpYYMX2rI8KWGDF9qyPClhgxfasjwpYYMX2rI8KWG\nDF9qyPClhgxfasjwpYYMX2rI8KWGRvnrtburqqknSP8v3uJLDRm+1JDhSw0ZvtTQoPCTvD3JySS/\nSHI2yfvGGiZpcYY+q/9V4PtV9S9JrgL2jrBJ0oLtOvwkbwM+APwbQFVdAi6NM0vSIg25q38ImAHf\nTPJUknuTXD3SLkkLNCT8NeA9wNer6kbgj8Dx7VdKcizJZpLN2Ww24HCSxjIk/PPA+ao6NT9/kq1v\nBH+lqk5U1UZVbayvrw84nKSx7Dr8qnoZeDHJDfOLjgBnRlklaaGGPqv/KeCB+TP6zwMfHz5J0qIN\nCr+qngY2RtoiaUl8557UkOFLDRm+1JDhSw0ZvtSQ4UsNGb7UkOFLDRm+1JDhSw0ZvtSQ4UsNGb7U\nkOFLDRm+1JDhSw0ZvtSQ4UsNGb7UkOFLDRm+1JDhSw0ZvtSQ4UsNGb7UkOFLDRm+1JDhSw0NCj/J\nZ5OcTvJMkgeTvHmsYZIWZ9fhJ9kPfBrYqKp3A3uA28caJmlxht7VXwPekmQN2Av8evgkSYu26/Cr\n6iXgS8ALwAXgd1X1w+3XS3IsyWaSzdlstvulkkYz5K7+NcBR4BDwLuDqJHduv15VnaiqjaraWF9f\n3/1SSaMZclf/VuBXVTWrqj8BDwPvH2eWpEUaEv4LwE1J9iYJcAQ4O84sSYs05DH+KeAk8CTw8/nX\nOjHSLkkLtDbkf66qe4B7RtoiaUl8557UkOFLDRm+1JDhSw0ZvtSQ4UsNGb7UkOFLDRm+1JDhSw0Z\nvtSQ4UsNGb7UkOFLDRm+1JDhSw0ZvtSQ4UsNGb7UkOFLDRm+1JDhSw0ZvtSQ4UsNGb7UkOFLDRm+\n1NCO4Se5L8nFJM9cdtk7kjyW5Nn5x2sWO1PSmK7kFv9bwG3bLjsOPF5V1wOPz89LeoPYMfyq+inw\n220XHwXun5++H/joyLskLdBuH+NfW1UX5qdfBq4daY+kJRj85F5VFVCv9/kkx5JsJtmczWZDDydp\nBLsN/zdJ3gkw/3jx9a5YVSeqaqOqNtbX13d5OElj2m34jwB3zU/fBXx3nDmSluFKXs57EPhv4IYk\n55N8Avgi8E9JngVunZ+X9AaxttMVquqO1/nUkZG3SFoS37knNWT4UkOGLzVk+FJDhi81ZPhSQ4Yv\nNWT4UkOGLzVk+FJDhi81ZPhSQ4YvNWT4UkOGLzVk+FJDhi81ZPhSQ4YvNWT4UkOGLzVk+FJD2foX\nsJZ0sGQG/M8OV9sHvLKEOVfKPTtbtU2d9/xdVe34T1YtNfwrkWSzqjam3vEX7tnZqm1yz868qy81\nZPhSQ6sY/ompB2zjnp2t2ib37GDlHuNLWrxVvMWXtGArE36S25L8MslzSY6vwJ7rkvw4yZkkp5Pc\nPfUmgCR7kjyV5HsrsOXtSU4m+UWSs0neN/Gez85/r55J8mCSN0+w4b4kF5M8c9ll70jyWJJn5x+v\nWfau7VYi/CR7gK8BHwQOA3ckOTztKl4FPldVh4GbgH9fgU0AdwNnpx4x91Xg+1X198A/MOGuJPuB\nTwMbVfVuYA9w+wRTvgXctu2y48DjVXU98Pj8/KRWInzgvcBzVfV8VV0CHgKOTjmoqi5U1ZPz039g\n6w/1/ik3JTkAfAi4d8od8y1vAz4AfAOgqi5V1f9Ou4o14C1J1oC9wK+XPaCqfgr8dtvFR4H756fv\nBz661FGvYVXC3w+8eNn580wc2eWSHARuBE5Nu4SvAJ8H/jzxDoBDwAz45vyhx71Jrp5qTFW9BHwJ\neAG4APyuqn441Z5trq2qC/PTLwPXTjkGVif8lZXkrcB3gM9U1e8n3PFh4GJVPTHVhm3WgPcAX6+q\nG4E/MuFd2Pnj5qNsfUN6F3B1kjun2vN6autltMlfSluV8F8Crrvs/IH5ZZNK8ia2on+gqh6eeM7N\nwEeSnGProdAtSb494Z7zwPmq+su9oJNsfSOYyq3Ar6pqVlV/Ah4G3j/hnsv9Jsk7AeYfL068Z2XC\n/xlwfZJDSa5i60mZR6YclCRsPX49W1VfnnILQFV9oaoOVNVBtn59flRVk92iVdXLwItJbphfdAQ4\nM9Uetu7i35Rk7/z37gir8yToI8Bd89N3Ad+dcAuwdXdtclX1apJPAj9g69nY+6rq9MSzbgY+Bvw8\nydPzy/6jqh6dcNOq+RTwwPyb9fPAx6caUlWnkpwEnmTrFZmnmOAdc0keBP4R2JfkPHAP8EXgP5N8\ngq2fTv3XZe/aznfuSQ2tyl19SUtk+FJDhi81ZPhSQ4YvNWT4UkOGLzVk+FJD/wfNOmy+DZRWAQAA\nAABJRU5ErkJggg==\n",
+            "text/plain": [
+              "<Figure size 432x288 with 1 Axes>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
     }
   ]
 }
