--- a/square_tr_cnn.ipynb
+++ b/square_tr_cnn.ipynb
@@ -40,9 +40,19 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
+        "\n",
+        "# DML CNN section\n",
+        "from __future__ import absolute_import, division, print_function, unicode_literals\n",
+        "\n",
+        "# Import TensorFlow and TensorFlow Datasets\n",
+        "import tensorflow as tf\n",
+        "import tensorflow_datasets as tfds\n",
+        "tf.logging.set_verbosity(tf.logging.ERROR)\n",
+        "\n",
+        "# Generate squares and triangles training database\n",
         "img_siz = 12;\n",
-        "sq   = np.zeros((img_siz,img_siz,100));\n",
-        "tr   = np.zeros((img_siz,img_siz,100));\n",
+        "sq   = np.zeros((img_siz,img_siz,500));\n",
+        "tr   = np.zeros((img_siz,img_siz,500));\n",
         "\n",
         "for k in range(100):\n",
         "  x0 = np.int8(3 * np.random.random_sample())+1;   #random origin x coord\n",
@@ -59,9 +69,12 @@
         "    for j in range(i):\n",
         "      tr[y0+i, x0+j, k] = 1;\n",
         "     \n",
+        "# Generate squares and triangles validation database\n",
+        "      \n",
+        "      \n",
         "      \n",
         "#plt.imshow(sq[:,:,11], cmap=plt.cm.binary)\n",
-        "plt.imshow(tr[:,:,11], cmap=plt.cm.binary)"
+        "#plt.imshow(tr[:,:,11], cmap=plt.cm.binary)"
       ],
       "execution_count": 0,
       "outputs": [
