--- a/square_tr_cnn.ipynb
+++ b/square_tr_cnn.ipynb
@@ -29,10 +29,10 @@
       "metadata": {
         "id": "aDb1GHBxwLL7",
         "colab_type": "code",
-        "outputId": "9c553f79-1ddb-4dff-b9d2-dcb0dd9a94db",
+        "outputId": "6a7f8b3f-c79a-45bb-f18b-fdbce7e7ad0c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 286
+          "height": 350
         }
       },
       "source": [
@@ -50,24 +50,29 @@
         "tf.logging.set_verbosity(tf.logging.ERROR)\n",
         "\n",
         "# Generate squares and triangles training database\n",
-        "img_siz = 12;\n",
-        "sq   = np.zeros((img_siz,img_siz,500));\n",
-        "tr   = np.zeros((img_siz,img_siz,500));\n",
+        "img_size = 12;\n",
+        "train_size = 500;\n",
+        "cate     = 2;\n",
+        "sq_train   = np.zeros((img_size, img_size, train_size));\n",
+        "tr_train   = np.zeros((img_size, img_size, train_size));\n",
         "\n",
         "for k in range(100):\n",
-        "  x0 = np.int8(3 * np.random.random_sample())+1;   #random origin x coord\n",
-        "  y0 = np.int8(3 * np.random.random_sample())+1;   #random origin y coord\n",
-        "  w = np.int8(img_siz/3 * np.random.random_sample()+img_siz/3);   #random size\n",
+        "  x0 = np.int8(3 * np.random.random_sample())+1;   # random origin x coord\n",
+        "  y0 = np.int8(3 * np.random.random_sample())+1;   # random origin y coord\n",
+        "  w = np.int8(img_size/3 * np.random.random_sample()+img_size/3);   # random size\n",
         "\n",
         "  # square\n",
         "  for i in range(w):\n",
         "    for j in range(w):\n",
-        "      sq[y0+i, x0+j, k] = 1;\n",
+        "      sq_train[y0+i, x0+j, k] = 1;\n",
         "  \n",
         "  # triangle      \n",
         "  for i in range(w):\n",
         "    for j in range(i):\n",
-        "      tr[y0+i, x0+j, k] = 1;\n",
+        "      tr_train[y0+i, x0+j, k] = 1;\n",
+        "\n",
+        "# Generate and shuffle\n",
+        "\n",
         "     \n",
         "# Generate squares and triangles validation database\n",
         "      \n",
@@ -76,31 +81,31 @@
         "#plt.imshow(sq[:,:,11], cmap=plt.cm.binary)\n",
         "#plt.imshow(tr[:,:,11], cmap=plt.cm.binary)"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<matplotlib.image.AxesImage at 0x7f983f6fecc0>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 81
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "WARNING: The TensorFlow contrib module will not be included in TensorFlow 2.0.\n",
+            "For more information, please see:\n",
+            "  * https://github.com/tensorflow/community/blob/master/rfcs/20180907-contrib-sunset.md\n",
+            "  * https://github.com/tensorflow/addons\n",
+            "If you depend on functionality not listed there, please file an issue.\n",
+            "\n"
+          ],
+          "name": "stdout"
         },
         {
-          "output_type": "display_data",
-          "data": {
-            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP4AAAD8CAYAAABXXhlaAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDMuMC4zLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvnQurowAACqRJREFUeJzt3V+onAedh/Hnu4lFUxet5FA0KZtc\nlC5BWCoHqRZkabpQVzFeLEsLla4IuVm1iiDRm956IaIXIoRaLVhalliwSFFLVWRhCZ6mBZtEaanZ\nNjU1U8Q/eBOLv704I8RD6wnnfWfe6f6eD5QzM5me+dL0Oe/8yyRVhaRe/m7qAZKWz/Clhgxfasjw\npYYMX2rI8KWGDF9qyPClhgxfamj3Mm9s7969deDAgWXepNTKuXPnePnll7Pd9ZYa/oEDB9jY2Fjm\nTUqtrK+vX9H1vKsvNWT4UkOGLzVk+FJDg8JPcluSXyR5NsmxsUZJWqwdh59kF/BV4P3AIeCOJIfG\nGiZpcYYc8d8NPFtVz1XVJeAh4Mg4syQt0pDw9wEvXHb+/Pyyv5LkaJKNJBuz2WzAzUkay8Kf3Kuq\n41W1XlXra2tri745SVdgSPgvAtdddn7//DJJK25I+D8Frk9yMMlVwO3AI+PMkrRIO36vflW9kuTj\nwPeBXcB9VXV6tGWSFmbQH9KpqkeBR0faImlJfOee1JDhSw0ZvtSQ4UsNGb7UkOFLDRm+1JDhSw0Z\nvtSQ4UsNGb7UkOFLDRm+1JDhSw0ZvtSQ4UsNGb7UkOFLDRm+1JDhSw0ZvtSQ4UsNGb7UkOFLDRm+\n1JDhSw0ZvtTQjsNPcl2SHyU5k+R0krvHHCZpcYb8pZmvAJ+pqlNJ/h54IsljVXVmpG2SFmTHR/yq\nulBVp+an/wCcBfaNNUzS4ozyGD/JAeBG4OQY30/SYg0OP8mbgW8Dn6qq37/Krx9NspFkYzabDb05\nSSMYFH6SN7AZ/QNV9fCrXaeqjlfVelWtr62tDbk5SSMZ8qx+gK8DZ6vqS+NNkrRoQ474NwMfAW5J\n8tT8n38daZekBdrxy3lV9d9ARtwiaUl8557UkOFLDRm+1NCQt+y+7m2+MDFcVY3yfaRl8YgvNWT4\nUkOGLzVk+FJDhi81ZPhSQ4YvNWT4UkOGLzVk+FJDhi81ZPhSQ4YvNWT4UkOGLzVk+FJDhi81ZPhS\nQ60/emssY32EF/gxXloOj/hSQ4YvNWT4UkOGLzU0OPwku5I8meS7YwyStHhjHPHvBs6O8H0kLcmg\n8JPsBz4A3DvOHEnLMPSI/2Xgs8CfR9giaUl2HH6SDwIXq+qJba53NMlGko3ZbLbTm5M0oiFH/JuB\nDyU5BzwE3JLkW1uvVFXHq2q9qtbX1tYG3Jyksew4/Kr6XFXtr6oDwO3AD6vqztGWSVoYX8eXGhrl\nD+lU1Y+BH4/xvSQtnkd8qSHDlxoyfKkhw5ca8hN4VsxYn+bjJ/nob/GILzVk+FJDhi81ZPhSQ4Yv\nNWT4UkOGLzVk+FJDhi81ZPhSQ4YvNWT4UkOGLzVk+FJDhi81ZPhSQ4YvNeQn8Pw/5Sf56G/xiC81\nZPhSQ4YvNWT4UkODwk/y1iQnkvw8ydkk7xlrmKTFGfqs/leA71XVvyW5CtgzwiZJC7bj8JO8BXgf\n8B8AVXUJuDTOLEmLNOSu/kFgBnwjyZNJ7k1y9Ui7JC3QkPB3A+8CvlZVNwJ/BI5tvVKSo0k2kmzM\nZrMBNydpLEPCPw+cr6qT8/Mn2PxB8Feq6nhVrVfV+tra2oCbkzSWHYdfVS8BLyS5YX7RYeDMKKsk\nLdTQZ/U/ATwwf0b/OeCjwydJWrRB4VfVU8D6SFskLYnv3JMaMnypIcOXGjJ8qaHWn8Djp8uoK4/4\nUkOGLzVk+FJDhi81ZPhSQ4YvNWT4UkOGLzVk+FJDhi81ZPhSQ4YvNWT4UkOGLzVk+FJDhi81ZPhS\nQ4YvNWT4UkOGLzVk+FJDhi81ZPhSQ4PCT/LpJKeTPJ3kwSRvHGuYpMXZcfhJ9gGfBNar6p3ALuD2\nsYZJWpyhd/V3A29KshvYA/xq+CRJi7bj8KvqReCLwPPABeB3VfWDrddLcjTJRpKN2Wy286WSRjPk\nrv41wBHgIPAO4Ookd269XlUdr6r1qlpfW1vb+VJJoxlyV/9W4JdVNauqPwEPA+8dZ5akRRoS/vPA\nTUn2JAlwGDg7zixJizTkMf5J4ARwCvjZ/HsdH2mXpAXaPeRfrqp7gHtG2iJpSXznntSQ4UsNGb7U\nkOFLDRm+1JDhSw0ZvtSQ4UsNGb7UkOFLDRm+1JDhSw0ZvtSQ4UsNGb7UkOFLDRm+1JDhSw0ZvtSQ\n4UsNGb7UkOFLDRm+1JDhSw0ZvtSQ4UsNGb7U0LbhJ7kvycUkT1922duSPJbkmfnXaxY7U9KYruSI\n/03gti2XHQMer6rrgcfn5yW9TmwbflX9BPjNlouPAPfPT98PfHjkXZIWaKeP8a+tqgvz0y8B1460\nR9ISDH5yr6oKqNf69SRHk2wk2ZjNZkNvTtIIdhr+r5O8HWD+9eJrXbGqjlfVelWtr62t7fDmJI1p\np+E/Atw1P30X8J1x5khahit5Oe9B4H+AG5KcT/Ix4AvAvyR5Brh1fl7S68Tu7a5QVXe8xi8dHnmL\npCXxnXtSQ4YvNWT4UkOGLzVk+FJDhi81ZPhSQ4YvNWT4UkOGLzVk+FJDhi81ZPhSQ4YvNWT4UkOG\nLzVk+FJDhi81ZPhSQ4YvNWT4UkOGLzWUzb8Ba0k3lsyA/93manuBl5cw50q5Z3urtqnznn+oqm3/\nyqqlhn8lkmxU1frUO/7CPdtbtU3u2Z539aWGDF9qaBXDPz71gC3cs71V2+SebazcY3xJi7eKR3xJ\nC7Yy4Se5Lckvkjyb5NgK7LkuyY+SnElyOsndU28CSLIryZNJvrsCW96a5ESSnyc5m+Q9E+/59Pz3\n6ukkDyZ54wQb7ktyMcnTl132tiSPJXlm/vWaZe/aaiXCT7IL+CrwfuAQcEeSQ9Ou4hXgM1V1CLgJ\n+M8V2ARwN3B26hFzXwG+V1X/CPwTE+5Ksg/4JLBeVe8EdgG3TzDlm8BtWy47BjxeVdcDj8/PT2ol\nwgfeDTxbVc9V1SXgIeDIlIOq6kJVnZqf/gOb/1Pvm3JTkv3AB4B7p9wx3/IW4H3A1wGq6lJV/Xba\nVewG3pRkN7AH+NWyB1TVT4DfbLn4CHD//PT9wIeXOupVrEr4+4AXLjt/nokju1ySA8CNwMlpl/Bl\n4LPAnyfeAXAQmAHfmD/0uDfJ1VONqaoXgS8CzwMXgN9V1Q+m2rPFtVV1YX76JeDaKcfA6oS/spK8\nGfg28Kmq+v2EOz4IXKyqJ6basMVu4F3A16rqRuCPTHgXdv64+QibP5DeAVyd5M6p9ryW2nwZbfKX\n0lYl/BeB6y47v39+2aSSvIHN6B+oqocnnnMz8KEk59h8KHRLkm9NuOc8cL6q/nIv6ASbPwimcivw\ny6qaVdWfgIeB906453K/TvJ2gPnXixPvWZnwfwpcn+RgkqvYfFLmkSkHJQmbj1/PVtWXptwCUFWf\nq6r9VXWAzf8+P6yqyY5oVfUS8EKSG+YXHQbOTLWHzbv4NyXZM/+9O8zqPAn6CHDX/PRdwHcm3AJs\n3l2bXFW9kuTjwPfZfDb2vqo6PfGsm4GPAD9L8tT8ss9X1aMTblo1nwAemP+wfg746FRDqupkkhPA\nKTZfkXmSCd4xl+RB4J+BvUnOA/cAXwD+K8nH2PzTqf++7F1b+c49qaFVuasvaYkMX2rI8KWGDF9q\nyPClhgxfasjwpYYMX2ro/wAcfXXEmY5G4wAAAABJRU5ErkJggg==\n",
-            "text/plain": [
-              "<Figure size 432x288 with 1 Axes>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-fd22c71a99d6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     25\u001b[0m   \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mw\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mw\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m       \u001b[0msq\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0my0\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx0\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m   \u001b[0;31m# triangle\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'sq' is not defined"
+          ]
         }
       ]
     }
