--- a/square_tr_cnn_v3_works.ipynb
+++ b/square_tr_cnn_v3_works.ipynb
@@ -29,10 +29,10 @@
       "metadata": {
         "id": "aDb1GHBxwLL7",
         "colab_type": "code",
-        "outputId": "c4cbe77f-f6a7-41cd-fbbb-93170cc96503",
+        "outputId": "a178d67d-a497-4632-baa7-3d8a8e156b06",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 799
+          "height": 129
         }
       },
       "source": [
@@ -50,9 +50,10 @@
         "import tensorflow_datasets as tfds\n",
         "tf.logging.set_verbosity(tf.logging.ERROR)\n",
         "\n",
+        "# -----------------------------------------------------------------------------------------------------------------------------------\n",
         "# Generate squares and triangles training database\n",
         "img_size = 12;\n",
-        "train_size = 500;\n",
+        "train_size = 600;\n",
         "test_size  = np.int8(train_size/5);\n",
         "sq_train   = np.zeros((img_size, img_size, train_size));\n",
         "tr_train   = np.zeros((img_size, img_size, train_size));\n",
@@ -74,7 +75,9 @@
         "    for j in range(i):\n",
         "      tr_train[y0+i, x0+j, k] = 1;\n",
         "  \n",
-        "     \n",
+        "#plt.imshow(sq[:,:,11], cmap=plt.cm.binary)\n",
+        "#plt.imshow(tr[:,:,11], cmap=plt.cm.binary)\n",
+        "\n",
         "# Generate squares and triangles validation database\n",
         "for k in range(test_size):\n",
         "  x0 = np.int8(3 * np.random.random_sample()+img_size/4);   # random origin x coord for test images\n",
@@ -105,7 +108,8 @@
         "  shuffle(test_images);\n",
         "  \n",
         "\n",
-        "# Model\n",
+        "# -----------------------------------------------------------------------------------------------------------------------------------\n",
+        "# Model generate\n",
         "model = tf.keras.Sequential([\n",
         "    tf.keras.layers.Conv2D(32, (3,3), padding='same', activation=tf.nn.relu,\n",
         "                           input_shape=(img_size, img_size,1)),\n",
@@ -113,12 +117,13 @@
         "    tf.keras.layers.Conv2D(64, (3,3), padding='same', activation=tf.nn.relu),\n",
         "    tf.keras.layers.MaxPooling2D((2, 2), strides=2),\n",
         "    tf.keras.layers.Flatten(),\n",
-        "    tf.keras.layers.Dropout(0.1),\n",
+        "    tf.keras.layers.Dropout(0.5),\n",
         "    tf.keras.layers.Dense(128, activation=tf.nn.relu),\n",
-        "    tf.keras.layers.Dropout(0.1),\n",
+        "    tf.keras.layers.Dropout(0.2),\n",
         "    tf.keras.layers.Dense(2,   activation=tf.nn.softmax)\n",
         "])\n",
         "\n",
+        "# Model compile\n",
         "model.compile(optimizer='adam', \n",
         "              loss='sparse_categorical_crossentropy',\n",
         "              metrics=['accuracy'])\n",
@@ -128,126 +133,61 @@
         "tst_img_data = np.array([i[0] for i in test_images]).reshape(-1,img_size,img_size,1)\n",
         "tst_lbl_data = np.array([i[1] for i in test_images])\n",
         "\n",
-        "model.fit(tr_img_data, tr_lbl_data, epochs=10, batch_size=64)\n",
+        "# Model fit\n",
+        "model.fit(tr_img_data, tr_lbl_data, epochs=30, batch_size=128)\n",
         "model.summary();\n",
-        "test_loss, test_accuracy = model.evaluate(tst_img_data, tst_lbl_data, steps=32)\n",
-        "      \n",
-        "#plt.imshow(sq[:,:,11], cmap=plt.cm.binary)\n",
-        "#plt.imshow(tr[:,:,11], cmap=plt.cm.binary)"
+        "test_loss, test_accuracy = model.evaluate(tst_img_data, tst_lbl_data)\n"
       ],
-      "execution_count": 5,
+      "execution_count": 12,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "Epoch 1/10\n",
-            "1000/1000 [==============================] - 1s 618us/sample - loss: 0.3692 - acc: 0.8910\n",
-            "Epoch 2/10\n",
-            "1000/1000 [==============================] - 0s 316us/sample - loss: 0.0493 - acc: 0.9890\n",
-            "Epoch 3/10\n",
-            "1000/1000 [==============================] - 0s 313us/sample - loss: 0.0069 - acc: 1.0000\n",
-            "Epoch 4/10\n",
-            "1000/1000 [==============================] - 0s 321us/sample - loss: 0.0014 - acc: 1.0000\n",
-            "Epoch 5/10\n",
-            "1000/1000 [==============================] - 0s 359us/sample - loss: 6.5937e-04 - acc: 1.0000\n",
-            "Epoch 6/10\n",
-            "1000/1000 [==============================] - 0s 350us/sample - loss: 4.4319e-04 - acc: 1.0000\n",
-            "Epoch 7/10\n",
-            "1000/1000 [==============================] - 0s 357us/sample - loss: 3.1639e-04 - acc: 1.0000\n",
-            "Epoch 8/10\n",
-            "1000/1000 [==============================] - 0s 360us/sample - loss: 2.5906e-04 - acc: 1.0000\n",
-            "Epoch 9/10\n",
-            "1000/1000 [==============================] - 0s 367us/sample - loss: 2.0433e-04 - acc: 1.0000\n",
-            "Epoch 10/10\n",
-            "1000/1000 [==============================] - 0s 348us/sample - loss: 1.8543e-04 - acc: 1.0000\n",
-            "_________________________________________________________________\n",
-            "Layer (type)                 Output Shape              Param #   \n",
-            "=================================================================\n",
-            "conv2d_8 (Conv2D)            (None, 12, 12, 32)        320       \n",
-            "_________________________________________________________________\n",
-            "max_pooling2d_8 (MaxPooling2 (None, 6, 6, 32)          0         \n",
-            "_________________________________________________________________\n",
-            "conv2d_9 (Conv2D)            (None, 6, 6, 64)          18496     \n",
-            "_________________________________________________________________\n",
-            "max_pooling2d_9 (MaxPooling2 (None, 3, 3, 64)          0         \n",
-            "_________________________________________________________________\n",
-            "flatten_4 (Flatten)          (None, 576)               0         \n",
-            "_________________________________________________________________\n",
-            "dropout_4 (Dropout)          (None, 576)               0         \n",
-            "_________________________________________________________________\n",
-            "dense_8 (Dense)              (None, 128)               73856     \n",
-            "_________________________________________________________________\n",
-            "dropout_5 (Dropout)          (None, 128)               0         \n",
-            "_________________________________________________________________\n",
-            "dense_9 (Dense)              (None, 2)                 258       \n",
-            "=================================================================\n",
-            "Total params: 92,930\n",
-            "Trainable params: 92,930\n",
-            "Non-trainable params: 0\n",
-            "_________________________________________________________________\n",
-            "32/32 [==============================] - 1s 22ms/step - loss: 1.0887 - acc: 0.8000\n"
-          ],
-          "name": "stdout"
+          "output_type": "error",
+          "ename": "IndentationError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-7651add93d7c>\"\u001b[0;36m, line \u001b[0;32m105\u001b[0m\n\u001b[0;31m    x0 = 0;\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+          ]
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vq-ZdgGrEM2P",
+        "id": "RNgNQ_Q6J3uR",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "3372c883-f5a7-40a2-d4b2-a4173c552ef5"
+        "outputId": "f8725a03-995c-43f1-fa21-2b3782e39f6d"
       },
       "source": [
-        "np.array([1,0]).ndim\n"
+        "# -----------------------------------------------------------------------------------------------------------------------------------\n",
+        "# Model predict\n",
+        "x0 = 1; \n",
+        "y0 = 1; \n",
+        "w  = 5;\n",
+        "pred   = np.zeros((img_size, img_size, 1));\n",
+        "for i in range(w):\n",
+        "  for j in range(w):\n",
+        "    pred[y0+i, x0+j, 0] = 1;\n",
+        "\n",
+        "pred_img_data = pred.reshape(-1,img_size,img_size,1)\n",
+        "model.predict(pred_img_data)"
       ],
-      "execution_count": 11,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "1"
+              "array([[1.0000000e+00, 4.8972963e-09]], dtype=float32)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "GX4JTCQfDK2I",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "0e62cf0d-6d44-4d68-950f-af8b747857a2"
-      },
-      "source": [
-        "tr_lbl_data.ndim\n"
-      ],
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "2"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 13
+          "execution_count": 31
         }
       ]
     }
