--- a/gen_canvas_v3.ipynb
+++ b/gen_canvas_v3.ipynb
@@ -257,6 +257,20 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "IWQSTb0nmzRm",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "plt.imshow(canvas_f[10012], cmap='gray', vmin=0, vmax=255)\n",
+        "plt.show()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "Xsqs6fF4Xgd-",
         "colab_type": "code",
         "colab": {}
