--- a/gen_canvas_v3.ipynb
+++ b/gen_canvas_v3.ipynb
@@ -257,20 +257,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IWQSTb0nmzRm",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "plt.imshow(canvas_f[10012], cmap='gray', vmin=0, vmax=255)\n",
-        "plt.show()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "Xsqs6fF4Xgd-",
         "colab_type": "code",
         "colab": {}
@@ -286,13 +272,40 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1GoeSPAFMdwf",
+        "id": "22av_n0anKC8",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 104
+          "height": 170
         },
-        "outputId": "607eb076-1275-44c2-d8df-5839a95d3e3d"
+        "outputId": "9c1b8f3d-83c6-482c-875e-cb76a83546f3"
+      },
+      "source": [
+        "plt.imshow(canvas_f[10012], cmap='gray', vmin=0, vmax=255)\n",
+        "plt.show()"
+      ],
+      "execution_count": 170,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXQAAACZCAYAAAA/zsG7AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDMuMC4zLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvnQurowAADqFJREFUeJzt3W+MHPddx/H3h/PFZ/wvZzexLPu4\ncyBUyhNIFIWgtnlA+JOYEodSRa4qMBDJQmpRrBK1biOhPkxAFIqEWhkSMCiQlLRVLNRCQ0hBPKiJ\nkzrNH8e1Y3KKLdvXFmrXxx3NLV8e7Mxl7m73bndvd2f2589LWu3M7Ozt178df/c7v/nNjCICMzMb\nfD9SdgBmZtYdTuhmZolwQjczS4QTuplZIpzQzcwS4YRuZpYIJ3Qzs0SsKqFLukvSSUmnJR3sVlBm\nZtY+dXpikaQh4NvALwBngeeBD0XEa90Lz8zMWrVmFe+9DTgdEWcAJD0B7AGaJvT169fHli1bVvGR\nZmZXn7Nnz343Iq5bab3VJPQdwFvFzwR+ZvFKkvYD+wFGR0c5cOAAvtyAmV2NJHX0vgcffHCylfVW\nk9BbEhGHgEMAY2NjSzJ5rVYDYGZmZsG8mdkgGhoaAmDdunUL5vthNQn9HDBWmN+ZLWvL7OwsAJOT\n9R+g6enpVYRkZlau9evXAzAxMbFgvh9WM8rleeBGSbskXQPsBY50JywzM2tXxxV6RMxJ+ijwT8AQ\n8FhEvNru35mbmwPeqcwvXbq0ZJ18l2VkZGTJ7kunfVJWruJxlLybLd9bG+RuN2+r6Wp3m81zWz+t\nqg89Ir4CfKVLsZiZ2Sr0/KBoN4yMjAAwPj6+pD/KVc9gKlY7+d5ZCsdRvK2maxC2WZ/6b2aWiIGo\n0PO+yA0bNrBp06YFr7nqGUzFaif/Dvs5vKtXvK2maxC2WVfoZmaJcEI3M0vEQHS5FHdVF++2ejc2\nHSl8l95Wry5V+05doZuZJcIJ3cwsEU7oZmaJcEI3M0uEE7qZWSKc0M3MEjEQwxYtbWvW1DfDfl43\nulfyf0P+bzLrJ1foZmaJcBlhpSteoRDSuR66Wb+5QjczS4QrdCtd8QqFZtY5V+hmZolwQjczS4S7\nXKwUVbtKnVkKXKGbmSXCCd3MLBFO6GZmiXBCNzNLhBO6mVkiVkzoksYkPSfpNUmvSnogW75F0jOS\nTmXPo70P18zMmmmlQp8Dfi8ibgJuBz4i6SbgIPBsRNwIPJvNm5lZSVZM6BFxPiJezKZ/AJwAdgB7\ngMPZaoeBe3sVpJmZraytPnRJE8DNwFFgW0Scz166AGzramRmZtaWlhO6pA3AF4EDEXG5+FpEBBBN\n3rdf0jFJx6anp1cVrJmZNddSQpc0TD2ZPx4RX8oWX5S0PXt9OzDV6L0RcSgibo2IW1O4I42ZWVW1\nMspFwKPAiYj4TOGlI8C+bHof8HT3wzMzs1a1cnGu9wC/Drws6Xi27FPAw8AXJN0PTAL39SZEMzNr\nxYoJPSL+HWh2abw7uxuOmZl1ymeKmpklwgndzCwRTuhmZolwQjczS4QTuplZIpzQzcwS4YRuZpYI\nJ3Qzs0Q4oZuZJcIJ3cwsEa1cy6V09avzLp1uR/0aY2Zm6XKFbmaWCCd0M7NEDESXS61WA+DKlStL\nulyKXSlDQ0MArFu3bsG8mdnVwBW6mVkiBqJCn52dBWBycnJJ1V2s0PNb3E1MTCyYNzO7GrhCNzNL\nxEBU6Hkf+vT0dEvrz83N9TIcM7Omlhtanb/Wq2HUrtDNzBLhhG5mlggndDOzLqrVatRqNWZmZpiZ\nmZnvMu4HJ3Qzs0QMxEHR3NDQECMjI/PTRZLmhymuWTNQ/ywzq7BWDnIW5cOsp6amANi4cWPfhlC7\nQjczS8RAlbLDw8Ncf/31AIyOjgLvVOqS5qfzKt7MrN/yPvO8Uu/nMOqBSuhvv/32/Fj0bdu2AbBh\nw4b5132JXDPrlkbdKXlynpmZAejrAc9WtNzlImlI0jcl/UM2v0vSUUmnJT0p6ZrehWlmZitppw/9\nAeBEYf4R4I8j4ieA/wbu72ZgjdRqNaanpxc88iFCZma9Njs7y+zsLFNTU0xNTc3PV0VLCV3STuCX\ngb/I5gX8HPBUtsph4N5eBGhmZq1ptQ/9T4CPAxuz+a3A9yMi7+0/C+zocmwNLR4SlPehF/vSc+5T\nN7N2NRumODc3x5UrVwDmn6vWO7BihS7p/cBURLzQyQdI2i/pmKRjrV5cy8zM2tdKhf4e4B5Ju4ER\nYBPwWeBaSWuyKn0ncK7RmyPiEHAIYGxsrLM7PBcU715UfB4ZGVlyQlGvr2xmZlePvO88n66iFSv0\niPhkROyMiAlgL/AvEfFh4Dngg9lq+4CnexZlA40OTpiZrUazoYp5d0v+qOpgjNWcKfoJ4GOSTlPv\nU3+0OyGZmVkn2jqxKCK+Dnw9mz4D3Nb9kFrTqOslP0O0UdeLu13MrBPFgRhV7wnwtVzMzBIxUKf+\nN1L89VxuCKOZWTPLneZf7AWoYr95kSt0M7NEDHyFXuxLLw5hhIV96R7CaGbtWHwSY9X7zyGBhJ4r\njhF114uZtaLVrhao3lmhjbjLxcwsEclU6LVabf6XNL/EwLp164Clt6szM2tmELtacq7QzcwSUXqF\nnh+47MZNVPNKPK/QN2/evGC5mdly8nsuwGD1nedcoZuZJaL0Cj0fYjg+Pg5059cwr/qHh4dX/bfM\n7OpRvG/x2rVrgaWXEmlV3uvQ6fs7UXpCz7tDPMTQzMo2PDw8fwP6rVu3rupv5bktL1r7wV0uZmaJ\nKL1CNzOriqGhoa4M0CiLK3Qzs0QkWaH7ei1mdjVyhW5mlojSK/R8mOLMzMyC+ZXkR5B9er+ZdSrf\nm290ka5efl6vlJ7Q8+skTE5OAu+c5bmS/MDFxMTEgnkzs6uVu1zMzBJReoWeX3s4r8wvXbrU0fvN\nzLqh027gXJndwa7QzcwSUXqFbmZWJZ0e18uVeXzPFbqZWSIGtkJfPMyoX8OOzCw9xfyx+J6ily9f\n7uhvlnF8zxW6mVkiWkrokq6V9JSk1yWdkPSzkrZIekbSqex5tNfBmplZc612uXwW+MeI+KCka4Af\nBT4FPBsRD0s6CBwEPtGjOJfIhxLlu0XFXSZfy8XM2lHMH/lB0EG69VxuxQpd0mbgDuBRgIj4YUR8\nH9gDHM5WOwzc26sgzcxsZa1U6LuA7wB/KemngBeAB4BtEXE+W+cCsK03ITa2eGhRcfC+K3Qza0ex\nQs8r8zzHDJJW+tDXALcAn4uIm4Fp6t0r86LeGg2HmUjaL+mYpGPtjuc0M7PWtVKhnwXORsTRbP4p\n6gn9oqTtEXFe0nZgqtGbI+IQcAhgbGxsSdLPb6Dqi2uZWVmKe/V5Tur0Psdl3Bw6t+InRsQFSW9J\nendEnATuBF7LHvuAh7PnpzsJIL+B6vj4ODCYByLMzHJl3Bw61+pPyO8Cj2cjXM4Av0W9u+YLku4H\nJoH7ehOimZm1oqWEHhHHgVsbvHTnagPIf8063b0xM7M6nylqZpYIJ3Qzs0Q4oZuZJaKUqy36xB8z\ns+5zhW5mlggndDOzRDihm5klwgndzCwR6uet2yR9h/rFvb7btw9dnXcxOLHCYMU7SLGC4+2lQYoV\nyol3PCKuW2mlviZ0AEnHIqLRWaeVM0ixwmDFO0ixguPtpUGKFaodr7tczMwS4YRuZpaIMhL6oRI+\ns1ODFCsMVryDFCs43l4apFihwvH2vQ/dzMx6w10uZmaJ6FtCl3SXpJOSTks6uPI7+kvSmKTnJL0m\n6VVJD2TLPy3pnKTj2WN32bECSHpT0stZTMeyZVskPSPpVPY8WnacAJLeXWi/45IuSzpQpbaV9Jik\nKUmvFJY1bE/V/Wm2LX9L0i0ViPUPJb2exfNlSddmyyckzRTa+PP9jHWZeJt+95I+mbXtSUm/VIFY\nnyzE+aak49ny0tt2iYjo+QMYAt4AbgCuAV4CburHZ7cR43bglmx6I/Bt4Cbg08CDZcfXIN43gXct\nWvYHwMFs+iDwSNlxNtkWLgDjVWpb4A7qN0N/ZaX2BHYDXwUE3A4crUCsvwisyaYfKcQ6UVyvQm3b\n8LvP/s+9BKwFdmV5Y6jMWBe9/kfA71elbRc/+lWh3wacjogzEfFD4AlgT58+uyURcT4iXsymfwCc\nAHaUG1Xb9gCHs+nDwL0lxtLMncAbETFZdiBFEfFvwH8tWtysPfcAfx113wCuzW6U3heNYo2Ir0XE\nXDb7DWBnv+JZSZO2bWYP8ERE/G9E/Cdwmnr+6IvlYlX9MrH3AX/Xr3ja1a+EvgN4qzB/lgonS0kT\nwM3A0WzRR7Nd2ceq0o0BBPA1SS9I2p8t2xYR57PpC8C2ckJb1l4W/oeoYtvmmrVn1bfn36a+B5Hb\nJembkv5V0vvKCqqBRt99ldv2fcDFiDhVWFaptvVB0UUkbQC+CByIiMvA54AfB34aOE99l6sK3hsR\ntwB3Ax+RdEfxxajvE1ZqCJPqNxm/B/j7bFFV23aJKrZnI5IeAuaAx7NF54Efi4ibgY8BfytpU1nx\nFQzMd1/wIRYWI5Vr234l9HPAWGF+Z7asUiQNU0/mj0fElwAi4mJE1CLi/4A/p4+7f8uJiHPZ8xTw\nZepxXcx3/bPnqfIibOhu4MWIuAjVbduCZu1Zye1Z0m8C7wc+nP0AkXVdfC+bfoF6n/RPlhZkZpnv\nvqptuwb4APBkvqyKbduvhP48cKOkXVmVthc40qfPbknWP/YocCIiPlNYXuwb/VXglcXv7TdJ6yVt\nzKepHxB7hXqb7stW2wc8XU6ETS2ocKrYtos0a88jwG9ko11uBy4VumZKIeku4OPAPRHxP4Xl10ka\nyqZvAG4EzpQT5TuW+e6PAHslrZW0i3q8/9Hv+Br4eeD1iDibL6hk2/bx6PFu6iNH3gAeKvtocIP4\n3kt9l/pbwPHssRv4G+DlbPkRYHsFYr2B+kiAl4BX8/YEtgLPAqeAfwa2lB1rIeb1wPeAzYVllWlb\n6j8054G3qffb3t+sPamPbvmzbFt+Gbi1ArGept73nG+7n8/W/bVsGzkOvAj8SkXatul3DzyUte1J\n4O6yY82W/xXwO4vWLb1tFz98pqiZWSJ8UNTMLBFO6GZmiXBCNzNLhBO6mVkinNDNzBLhhG5mlggn\ndDOzRDihm5kl4v8BxcMdE40MpCYAAAAASUVORK5CYII=\n",
+            "text/plain": [
+              "<Figure size 432x288 with 1 Axes>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1GoeSPAFMdwf",
+        "colab_type": "code",
+        "colab": {}
       },
       "source": [
         "# Model\n",
@@ -310,35 +323,18 @@
         "              loss='categorical_crossentropy',\n",
         "              metrics=['accuracy'])"
       ],
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Using TensorFlow backend.\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Colocations handled automatically by placer.\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "_9t_f6KsMw7g",
         "colab_type": "code",
-        "outputId": "dd33f7e1-743f-47d7-d7d9-4034aa59a470",
+        "outputId": "e6656adc-1d69-4daf-815d-6a34ba79e141",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 642
+          "height": 101
         }
       },
       "source": [
@@ -349,51 +345,23 @@
         "old_min = np.amin(canvas)\n",
         "canvas_images = (canvas_images.astype('float32') - old_min) * 2 / (old_max - old_min) - 1\n",
         "categ_labels = to_categorical(canvas_lbl[:num_img])\n",
-        "canvas_val   = canvas_val[num_img:num_img+num_val].reshape((num_val, img_rows, img_cols, 1))\n",
+        "canvas_val   = canvas_f[num_img:num_img+num_val].reshape((num_val, img_rows, img_cols, 1))\n",
         "canvas_val = (canvas_val.astype('float32') - old_min) * 2 / (old_max - old_min) - 1\n",
         "lbl_val = to_categorical(canvas_lbl[num_img:num_img+num_val])\n",
         "history = network.fit(canvas_images, categ_labels, epochs=12, batch_size=84, validation_data=(canvas_val, lbl_val))\n"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Train on 10000 samples, validate on 1000 samples\n",
+            "Train on 10000 samples, validate on 2000 samples\n",
             "Epoch 1/12\n",
-            "10000/10000 [==============================] - 206s 21ms/step - loss: 3.2865 - acc: 0.7961 - val_loss: 2.8529 - val_acc: 0.8230\n",
+            "10000/10000 [==============================] - 168s 17ms/step - loss: 1.0871 - acc: 0.4166 - val_loss: 0.9787 - val_acc: 0.5850\n",
             "Epoch 2/12\n",
-            "10000/10000 [==============================] - 206s 21ms/step - loss: 3.2865 - acc: 0.7961 - val_loss: 2.8529 - val_acc: 0.8230\n",
-            "Epoch 3/12\n",
-            "10000/10000 [==============================] - 207s 21ms/step - loss: 3.2865 - acc: 0.7961 - val_loss: 2.8529 - val_acc: 0.8230\n",
-            "Epoch 4/12\n",
-            "10000/10000 [==============================] - 207s 21ms/step - loss: 3.2865 - acc: 0.7961 - val_loss: 2.8529 - val_acc: 0.8230\n",
-            "Epoch 5/12\n",
-            "10000/10000 [==============================] - 207s 21ms/step - loss: 3.2865 - acc: 0.7961 - val_loss: 2.8529 - val_acc: 0.8230\n",
-            "Epoch 6/12\n",
-            "10000/10000 [==============================] - 207s 21ms/step - loss: 3.2865 - acc: 0.7961 - val_loss: 2.8529 - val_acc: 0.8230\n",
-            "Epoch 7/12\n",
-            "10000/10000 [==============================] - 210s 21ms/step - loss: 3.2865 - acc: 0.7961 - val_loss: 2.8529 - val_acc: 0.8230\n",
-            "Epoch 8/12\n",
-            " 2496/10000 [======>.......................] - ETA: 2:33 - loss: 3.4290 - acc: 0.7873"
+            " 3864/10000 [==========>...................] - ETA: 1:37 - loss: 0.9016 - acc: 0.5862"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-11-073a44dec9a7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mcanvas_tst\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mcanvas_tst\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'float32'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mold_min\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mold_max\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mold_min\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mlbl_tst\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mto_categorical\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcanvas_lbl\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mnum_tst\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0mhistory\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnetwork\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcanvas_images\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcateg_labels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepochs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m12\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m48\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalidation_data\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcanvas_tst\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlbl_tst\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/keras/engine/training.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, steps_per_epoch, validation_steps, **kwargs)\u001b[0m\n\u001b[1;32m   1037\u001b[0m                                         \u001b[0minitial_epoch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minitial_epoch\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1038\u001b[0m                                         \u001b[0msteps_per_epoch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msteps_per_epoch\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1039\u001b[0;31m                                         validation_steps=validation_steps)\n\u001b[0m\u001b[1;32m   1040\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1041\u001b[0m     def evaluate(self, x=None, y=None,\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/keras/engine/training_arrays.py\u001b[0m in \u001b[0;36mfit_loop\u001b[0;34m(model, f, ins, out_labels, batch_size, epochs, verbose, callbacks, val_f, val_ins, shuffle, callback_metrics, initial_epoch, steps_per_epoch, validation_steps)\u001b[0m\n\u001b[1;32m    197\u001b[0m                     \u001b[0mins_batch\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mins_batch\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtoarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    198\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 199\u001b[0;31m                 \u001b[0mouts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mins_batch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    200\u001b[0m                 \u001b[0mouts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mto_list\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mouts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    201\u001b[0m                 \u001b[0;32mfor\u001b[0m \u001b[0ml\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mo\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout_labels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mouts\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, inputs)\u001b[0m\n\u001b[1;32m   2713\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_legacy_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2714\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2715\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2716\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2717\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mpy_any\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mis_tensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/keras/backend/tensorflow_backend.py\u001b[0m in \u001b[0;36m_call\u001b[0;34m(self, inputs)\u001b[0m\n\u001b[1;32m   2673\u001b[0m             \u001b[0mfetched\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_callable_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0marray_vals\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrun_metadata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_metadata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2674\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2675\u001b[0;31m             \u001b[0mfetched\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_callable_fn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0marray_vals\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2676\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mfetched\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moutputs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2677\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow/python/client/session.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1437\u001b[0m           ret = tf_session.TF_SessionRunCallable(\n\u001b[1;32m   1438\u001b[0m               \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_session\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_session\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_handle\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstatus\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1439\u001b[0;31m               run_metadata_ptr)\n\u001b[0m\u001b[1;32m   1440\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mrun_metadata\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1441\u001b[0m           \u001b[0mproto_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtf_session\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTF_GetBuffer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrun_metadata_ptr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-          ]
         }
       ]
     },
